# portfolio-agent-package

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.simple  LICENSE  README.md  WEEK8_COMPLETION_SUMMARY.md  docker-compose.yml  env.example  interactive_rag_index.faiss  interactive_rag_index.pkl  local_rag_index.faiss  local_rag_index.pkl  pyproject.original.toml  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  deploy.yml  docker.yml  publish.yml  settings-validation.yml
EXAMPLES/: README.md  interactive_rag_demo.py  security_demo.py
EXAMPLES/internal_kb_demo/: README.md
EXAMPLES/legacy/: README.md  finetuning_demo.py  local_rag_demo.py
EXAMPLES/legacy/internal_kb_demo/: README.md  kb_demo.py
EXAMPLES/legacy/portfolio_demo_assets/: config.example.yaml
EXAMPLES/legacy/portfolio_demo_assets/static/css/: style.css
EXAMPLES/legacy/portfolio_demo_assets/static/js/: chat.js  demo.js
EXAMPLES/legacy/portfolio_demo_assets/templates/: base.html  chat.html  index.html
EXAMPLES/legacy/recruiter_demo/: README.md  recruiter_demo.py
EXAMPLES/portfolio_demo/: app.py  config.example.yaml  start_demo.sh
EXAMPLES/recruiter_demo/: README.md
benchmarks/canonical_portfolio/: benchmark.json
benchmarks/canonical_portfolio/documents/: collaboration.txt  experience.txt  highlights.md  profile.txt  projects.txt
docs/: API_REFERENCE.md  ARCHITECTURE.md  EVALUATION.md  MANUAL_E2E.md  PRIVACY.md  QUICKSTART.md  README.md  RELEASE_CANDIDATE.md  RELEASE_CHECKLIST.md  TUTORIALS.md  USER_GUIDE.md
docs/legacy/: CICD_RUNBOOK.md  DEPLOYMENT.md  README.md  SECURITY.md
monitoring/: prometheus.yml
nginx/: nginx.conf
sample_docs/: ai_basics.txt  data_science.txt  experience.txt  portfolio.txt  python_programming.txt  skills.txt
scripts/: init-db.sql  integration_test.py  manual_e2e.py  release_check.py  run_evaluation.py  verify_artifact_install.py
src/portfolio_agent/: __init__.py  cli.py  config.py  evaluation.py  graph.py  rag_pipeline.py  sdk.py  text_matching.py  utils.py
src/portfolio_agent/agents/: __init__.py  critic.py  memory_manager.py  persona.py  reranker.py  retriever.py  router.py
src/portfolio_agent/agents/tools/: calendly_agent.py  email_agent.py  notes_agent.py
src/portfolio_agent/api/: __init__.py  middleware.py  models.py  server.py
src/portfolio_agent/api/endpoints/: __init__.py  documents.py  health.py  query.py
src/portfolio_agent/api/legacy/: README.md  admin.py  agents.py  metrics.py  security.py
src/portfolio_agent/embeddings/: __init__.py  hf_embedder.py  openai_embedder.py
src/portfolio_agent/finetune/: __init__.py  lora_train.py
src/portfolio_agent/ingestion/: __init__.py  chunker.py  generic_ingestor.py  github_ingestor.py  pii_redactor.py  resume_ingestor.py  website_ingestor.py
src/portfolio_agent/legacy/: README.md
src/portfolio_agent/legacy_checkpoint/: redis_checkpointer.py
src/portfolio_agent/legacy_finetuning/: __init__.py  peft_trainer.py  performance_optimizer.py  prompt_templates.py  quality_assessor.py  security_manager.py
src/portfolio_agent/legacy_llm_backends/: __init__.py  bedrock_client.py  hf_client.py
src/portfolio_agent/legacy_persistence/: __init__.py  sqlite_store.py
src/portfolio_agent/legacy_rag/: __init__.py  prompt_templates.py  reranker.py  retriever.py
src/portfolio_agent/legacy_security/: __init__.py  audit_logger.py  compliance_manager.py  consent_manager.py  data_encryption.py  privacy_preserving.py
src/portfolio_agent/legacy_vectorstores/: opensearch_store.py
src/portfolio_agent/llm_backends/: openai_client.py
src/portfolio_agent/persistence/: redis_memory.py
src/portfolio_agent/rag/: response_pipeline.py
src/portfolio_agent/security/: pii_detector.py
src/portfolio_agent/vector_stores/: __init__.py  faiss_store.py
src/portfolio_agent/vectorstores/: __init__.py  faiss_store.py  pinecone_store.py
tests/: test_agents.py  test_api.py  test_embeddings.py  test_evaluation.py  test_finetuning.py  test_graph_integration.py  test_import.py  test_ingestors.py  test_performance.py  test_rag_pipeline.py  test_sdk.py  test_security.py  test_settings_evaluation_integration.py  test_settings_runtime_integration.py  test_tools.py  test_utils.py
