[tool.poetry]
name = "portfolio-agent"
version = "0.3.0"
description = "A production-ready RAG pipeline with multi-agent architecture, memory management, and tool integration"
authors = ["Shelabh Tyagi <shelabh.tyagi@example.com>"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/shelabhtyagi/portfolio-agent"
repository = "https://github.com/shelabhtyagi/portfolio-agent"
documentation = "https://github.com/shelabhtyagi/portfolio-agent/blob/main/docs/README.md"
keywords = ["rag", "langgraph", "ai", "agent", "portfolio", "assistant", "vector-search", "embeddings", "fine-tuning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Database :: Database Engines/Servers",
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
# Core dependencies (always required)
langgraph = "^0.6.6"
redis = ">=6.0.0,<7.0.0"
msgpack = "^1.0.5"
pydantic-settings = "^2.0.0"
requests = "^2.31.0"
sqlalchemy = "^2.0.0"
pyyaml = "^6.0.0"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"

# LLM and Vector dependencies (required for your current use case)
openai = "^1.0.0"
langchain = "^0.3.0"
langchain-openai = "^0.1.0"
langchain-community = "^0.3.0"
pgvector = "^0.4.0"
psycopg = { version = "^3.1.0", extras = ["binary"] }
psycopg2-binary = "^2.9.7"  # For compatibility with libraries expecting psycopg2

# Vector stores
faiss-cpu = "^1.7.4"
pinecone-client = "^2.2.0"
opensearch-py = "^2.0.0"

# Embeddings
sentence-transformers = "^2.2.2"
transformers = "^4.30.0"
torch = "^2.0.0"
accelerate = "^0.20.0"

# Document processing
pypdf = "^3.17.0"
beautifulsoup4 = "^4.12.0"
lxml = "^4.9.0"
python-docx = "^0.8.11"
markdown = "^3.5.0"

# Security and privacy
cryptography = "^41.0.0"
presidio-analyzer = "^2.2.0"
presidio-anonymizer = "^2.2.0"
spacy = "^3.7.0"

# AWS Bedrock
boto3 = "^1.26.0"

# Utilities
numpy = "^1.24.0"
pandas = "^2.0.0"
scikit-learn = "^1.3.0"
python-multipart = "^0.0.6"
jinja2 = "^3.1.2"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-benchmark = "^4.0.0"
pytest-xdist = "^3.3.0"
pytest-cov = "^4.1.0"
pytest-timeout = "^2.1.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
bandit = "^1.7.0"
safety = "^2.3.0"

[tool.pytest.ini_options]
markers = [
    "benchmark: marks tests as benchmark tests",
    "slow: marks tests as slow running",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "security: marks tests as security tests"
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"